[package]
name = "gmt-asm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.40", optional = true }
flate2 = { version = "1.1.2", optional = true }
gmt-fem = "5.1.2"
gmt_dos-clients_fem = "5.1.1"
indicatif = { version = "0.18.0", features = ["rayon"] }
nalgebra = { version = "0.33.2", features = ["serde", "serde-serialize"] }
num-complex = "0.4.6"
# plotters = "0.3.7"
# polars = "0.49.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.2.0"
tar = { version = "0.4.44", optional = true }
thiserror = "2.0.12"


[features]
flate2 = ["dep:flate2"]
tar = ["dep:tar"]
# mesh = ["triangle-rs", "plotters", "colorous", "matio-rs"]
# infun = ["gmt_dos-clients_arrow", "tokio"]
# trfun-wn = [
#     "gmt_dos-clients_arrow",
#     "tokio",
#     "nalgebra",
#     "gmt_dos-clients/noise",
#     "gmt_dos-clients/nalgebra",
# ]
# trfun-an = [
#     "nalgebra/serde-serialize",
#     "serde",
#     "bincode",
#     "rayon",
#     "indicatif",
#     "serde-pickle",
#     "matio-rs/nalgebra",
#     "bincode",
# ]
archive = ["flate2", "tar"]
clap = ["dep:clap"]

# [[bin]]
# name = "mesh"
# path = "src/bin/facesheet-mesh.rs"
# required-features = ["mesh"]

# [[bin]]
# name = "nodes"
# path = "src/bin/facesheet-nodes.rs"
# required-features = ["polars"]

# [[bin]]
# name = "infun"
# path = "src/bin/influence-functions.rs"
# required-features = ["infun"]

# [[bin]]
# name = "trfun-wn"
# path = "src/bin/transfer-functions/white-noise/main.rs"
# required-features = ["trfun-wn"]

[[bin]]
name = "trfun-an"
path = "src/bin/transfer-functions/analytic/main.rs"
# required-features = ["clap"]

# [[bin]]
# name = "trfun-an-modal"
# path = "src/bin/transfer-functions/analytic/modal/main.rs"
# required-features = ["trfun-an", "archive"]

[[bin]]
name = "trfun-an-svd"
path = "src/bin/transfer-functions/analytic/svd/main.rs"

[[bin]]
name = "trfun-an-lsm"
path = "src/bin/transfer-functions/analytic/left_singular_modes/main.rs"

# [[bin]]
# name = "struct-trfun"
# path = "src/bin/structural-transfer-function/main.rs"
# required-features = ["trfun-an"]
